# escudeiro

./: .gitmodules  404.html  CHANGELOG.md  Cargo.toml  Makefile  build.sh  dev-requirements.txt  escudeiro_pyrs.pyi  index.html  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/workflows/: build-and-publish.yml  p312.yml  p313.yml
0.2.15/: 404.html  index.html  sitemap.xml
0.2.15/CHANGELOG/: index.html
0.2.15/LICENSE/: index.html
0.2.15/search/: search_index.json
0.2.16/: 404.html  index.html  sitemap.xml
0.2.16/CHANGELOG/: index.html
0.2.16/LICENSE/: index.html
0.2.16/search/: search_index.json
0.2.17/: 404.html  index.html  sitemap.xml
0.2.17/CHANGELOG/: index.html
0.2.17/LICENSE/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/LICENSE/: index.html
0.3.0/search/: search_index.json
CHANGELOG/: index.html
LICENSE/: index.html
benchmarks/: string.py  url.py
docker/: musllinux.dockerfile
escudeiro/: escudeiro_pyrs.pyi  lazyfields.py
escudeiro/autodiscovery/: base.py
escudeiro/config/: __init__.py
escudeiro/data/: main.py
escudeiro/ds/: __init__.py  manager.py  sentinel.py  sentinels.py  worker.py
escudeiro/exc/: __init__.py  errors.py
escudeiro/misc/: __init__.py  contextx.py  functions.py  iterx.py  strings.py  typex.py
escudeiro/url/: fragment.py  mixins.py  netloc.py  path.py  query.py  url.py
features/config/: index.html
scripts/: build-extension.py
search/: search_index.json
src/: filetree.rs  lib.rs  strings.rs  url.rs
tests/: test_lazyfields.py
(+141 files in other folders)
